--- a/styles/style.css
+++ b/styles/style.css
@@ -20,3 +20,16 @@
 .starActive {
   color: gold !important;
 }
+#linkMore {
+  text-decoration: none;
+}
+.modal {
+  position: absolute;
+  top: 10px;
+  right: 50px;
+  bottom: 0;
+  left: 0;
+  z-index: 10040;
+  overflow: auto;
+  overflow-y: auto;
+}
