--- a/styles/style.css
+++ b/styles/style.css
@@ -15,9 +15,10 @@
 }
 .star:hover {
   cursor: pointer;
-  color: gold !important;
+  font-size: 23px !important;
 }
 .starActive {
+  font-size: 23px !important;
   color: gold !important;
 }
 #linkMore {
@@ -32,4 +33,8 @@
   z-index: 10040;
   overflow: auto;
   overflow-y: auto;
+}
+.modal-body {
+  max-height: 40vh;
+  overflow: auto;
 }
