--- a/styles/style.css
+++ b/styles/style.css
@@ -27,17 +27,32 @@
 .modal {
   position: absolute;
   top: 10px;
-  right: 50px;
+  /* right: 50px; */
   bottom: 0;
   left: 0;
   z-index: 10040;
+  /* width: 1500px !important; */
   overflow: auto;
   overflow-y: auto;
 }
+#leaderModal {
+  position: absolute;
+  top: 10px;
+  /* right: 50px; */
+  bottom: 0;
+  left: 0;
+  z-index: 10040;
+  /* width: 1500px !important; */
+  /* overflow: auto;
+  overflow-y: auto; */
+}
 .modal-body {
-  max-height: 40vh;
+  max-height: 55vh;
   overflow: auto;
 }
+/* #leaderModal .modal-body {
+  max-height: 50vh;
+} */
 .modal-header {
   justify-content: start;
 }
