--- a/styles/style.css
+++ b/styles/style.css
@@ -108,3 +108,17 @@
 #watchListText {
   margin-top: 10px;
 }
+#porModal {
+  height: 660px !important;
+}
+#btn-group button,
+#totalSpent {
+  background-color: rgb(218, 218, 218);
+}
+#btn-group button:hover {
+  background-color: rgb(233, 233, 233);
+}
+#btn-group button:focus {
+  background-color: rgb(222, 222, 222);
+  outline: none !important;
+}
