--- a/styles/style.css
+++ b/styles/style.css
@@ -122,3 +122,8 @@
   background-color: rgb(222, 222, 222);
   outline: none !important;
 }
+#navigation {
+  border: 1px solid rgb(9, 177, 196);
+  border-top: 0;
+  border-radius: 0px 0px 5px 5px;
+}
