--- a/styles/style.css
+++ b/styles/style.css
@@ -47,9 +47,10 @@
 .modal-lg-content {
   max-height: 60vh;
 }
+/* here fix  */
 .modal-body {
   max-height: 80vh;
-  overflow: auto;
+  overflow: visible;
 }
 /* #leaderModal .modal-body {
   max-height: 50vh;
@@ -93,7 +94,7 @@
   margin-top: 35px;
 } */
 #zIndexSearch {
-  z-index: 10;
+  z-index: 100;
   /* max-height: 50vh; */
   /* overflow: auto; */
 }
@@ -104,13 +105,23 @@
   margin-top: -16px;
   border-radius: 0px 0px 10px 10px;
   cursor: pointer;
+  z-index: 200 !important;
+}
+#tableNone {
+  z-index: 200 !important;
 }
 #watchListText {
   margin-top: 10px;
 }
-#porModal {
-  height: 660px !important;
+#portfolioModal {
+  height: 700px;
+  overflow: hidden !important;
 }
+#porModall {
+  height: 660px !important;
+  overflow: hidden !important;
+}
+
 #btn-group button,
 #totalSpent {
   background-color: rgb(218, 218, 218);
@@ -126,4 +137,9 @@
   border: 1px solid rgb(9, 177, 196);
   border-top: 0;
   border-radius: 0px 0px 5px 5px;
+}
+.enable {
+  background-color: rgb(77, 77, 77) !important
+  ;
+  color: white !important;
 }
