--- a/styles/style.css
+++ b/styles/style.css
@@ -34,8 +34,8 @@
   overflow-y: auto;
 }
 .watchList {
-  overflow: visible !important;
-  overflow-y: visible !important;
+  /* overflow: visible !important;
+  overflow-y: visible !important; */
 }
 #leaderModal {
   /* position: absolute;
@@ -108,12 +108,16 @@
 #searchBoxContainer {
   max-height: 20vh;
   overflow: auto;
-  width: 50% !important;
+  width: 48% !important;
   margin-top: -16px;
   border-radius: 0px 0px 10px 10px;
   cursor: pointer;
   z-index: 200 !important;
 }
+.leader_search_list {
+  right: 0;
+}
+
 #tableNone {
   z-index: 200 !important;
 }
@@ -151,7 +155,3 @@
   color: white !important;
 }
 /* New Styles  */
-.leader_search_list {
-  right: 3%;
-  width: 5px !important;
-}
